# rqt_dumbo_cpe

./: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
resource/: dumbo_cpe_widget.ui
scripts/: dumbo_cpe_gui  rqt_dumbo_cpe
src/dumbo_cpe_gui/: dumbo_cpe.py  dumbo_cpe_widget.py
src/rqt_dumbo_cpe/: dumbo_cpe.py  dumbo_cpe_widget.py
